fixed spacing on tesimonial added codes for testimonial and removed one tag

--- a/styles/base.css
+++ b/styles/base.css
@@ -30,6 +30,9 @@ nav{
 a:hover{
 	background-color: #022801;
 }
+h2{
+	padding-left: 6px;
+}
 body{
 	font-family: Arial, Helvetica, sans-serif;
 	background-color: #FAFAD2;
@@ -58,14 +61,14 @@ dt{
 	font-size: 110%;
 	font-weight: lighter;
 }
-.content{
-	-webkit-columns: 200px 2; /* Safari and Chrome */
-	-moz-columns: 200px 2; /* Firefox */
-}
 #testimonial{
 	text-align: justify;
 	padding-left: 6px;
 	padding-right: 6px;
+}
+.para{
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
 .names{
 	text-align:right;
